# iter_chunk_ext

./: CHANGELOG.md  Cargo.toml  README.md
src/: chunk.rs  chunk_by.rs  chunks.rs  iterator_chunk_by_ext.rs  iterator_chunks_ext.rs  iterator_segment_by_ext.rs  lib.rs  msg.rs  prelude.rs  segment.rs  segment_by.rs
