[package]
name = "iter_chunk_ext"
version = "0.1.0"
authors = ["Nossie531"]
edition = "2024"
description = "Iterator extension for grouping items."
repository = "https://github.com/nossie531/iter_chunk_ext"
license = "MIT OR Apache-2.0"
keywords = ["Iterator"]
categories = ["no-std", "rust-patterns"]
