[package]
name = "iter_chunks_ext"
version = "0.1.0"
authors = ["Nossie531"]
edition = "2024"
description = "Iterator extension for grouping items."
repository = "https://github.com/nossie531/iter_chunks_ext"
license = "MIT OR Apache-2.0"
keywords = ["iterator"]
categories = ["no-std", "rust-patterns"]
